--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #1a1a1c;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.coin-app {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 64px;
+  color: #fff;
+}
+
+.coin-search {
+  margin-bottom: 64px;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.coin-text {
+  margin-bottom: 32px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.coin-input {
+  padding-left: 16px;
+  width: 300px;
+  height: 50px;
+  border-radius: 4px;
+  border: none;
+  background-image: linear-gradient(
+    -225deg,
+    rgb(83, 83, 83) 0%,
+    rgb(58, 57, 57) 100%
+  );
+  
+  color: #e2e2e2;
+}
+
+.coin-input::placeholder {
+  color: #e2e2e2;
+}
+
+.button {
+  border-radius: 4px;
+  background-color: #2ed09a;
+  border: none;
+  color: #FFFFFF;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  width: 290px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  margin: 5px;
+  margin-top: 15px;
+}
+
+.button span {
+  background-color: #2ed09a;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.3s ease-in-out;
+}
+
+.button span:after {
+  background-color: #2ed09a;
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.3s ease-in-out;
+}
+
+.button:hover span {
+  background-color: #2ed09a;
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  background-color: #2ed09a;
+  opacity: 1;
+  right: 0;
 }
